--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Trilha de CSS - DIO</title>
+  <link rel="stylesheet" type="text/css" href="./assets/CSS/layout.css">
+  <link rel="stylesheet" type="text/css" href="./assets/CSS/reset.css">
+  <title>Desafio Trilha de CSS - DIO</title>
 </head>
 <body>
+  <!--Cabeçalho-->
   <header class="banner">
     <div class="banner-content">
       <div class="logo">
@@ -14,9 +17,10 @@
       </div>
       <h1>Trilha de CSS da DIO</h1>
       <p>A nova Trilha de CSS da DIO está disponível. Acesse já e aprenda do zero como desenvolver sites profissionais.</p>
-      <button>Quero me inscrever</button>
+      <a href="https://dio.me" target="_blank"><button>Quero me inscrever</button></a>
     </div>
   </header>
+  <!--Corpo-->
   <main>
     <section id="course-content">
       <h2>O que vou aprender?</h2>
@@ -50,6 +54,7 @@
       </p>
     </section>
   </main>
+  <!--Rodapé-->
   <footer>
     <img class="dio-logo" src="assets/images/dio-logo.png" title="Logotipo DIO com o texto make the change" alt="Logotipo DIO com o texto make the change">
     <p>Acesse <a href="https://dio.me">dio.me</a> e se cadastre agora</p>
