Correção bug imagens

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="./assets/CSS/layout.css">
-  <link rel="stylesheet" type="text/css" href="./assets/CSS/reset.css">
   <title>Desafio Trilha de CSS - DIO</title>
 </head>
 <body>
@@ -13,7 +12,7 @@
   <header class="banner">
     <div class="banner-content">
       <div class="logo">
-        <img src="assets/images/logo.png" title="Logotipo Trilha de CSS DIO" alt="Logotipo Trilha de CSS DIO">
+        <img src="./assets/Images/logo.png" title="Logotipo Trilha de CSS DIO" alt="Logotipo Trilha de CSS DIO">
       </div>
       <h1>Trilha de CSS da DIO</h1>
       <p>A nova Trilha de CSS da DIO está disponível. Acesse já e aprenda do zero como desenvolver sites profissionais.</p>
